fixed start script in backend package.json

--- a/fair_weather_hiking/package.json
+++ b/fair_weather_hiking/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
+    "server": "node server.js",
+    "client": "cd client && npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
