--- a/fair_weather_hiking/package.json
+++ b/fair_weather_hiking/package.json
@@ -20,6 +20,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0",
+    "mongojs": "^3.1.0",
     "mongoose": "^5.9.11",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
