--- a/fair_weather_hiking/package.json
+++ b/fair_weather_hiking/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "server": "node server.js",
     "client": "cd client && npm run start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "seed": "node seeders/seed.js"
   },
   "author": "",
   "license": "MIT",
