--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client": "cd client && npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "seed": "node seeders/seed.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && cd client && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && cd client && npm install && npm run build"
 
   },
   "author": "",
