--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   
   "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "npm run dev",
-    "server": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "seed": "node seeders/seed.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && cd client && npm install && npm run build"
-
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
+
   "author": "",
   "license": "MIT",
   "dependencies": {
