--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "fair-weather-hiking",
   "version": "1.0.0",
   "description": "Mern Auth Example",
-  
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -12,9 +11,10 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "node server.js"
   },
-
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -27,6 +27,7 @@
     "materialize-css": "^1.0.0",
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.11",
+    "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^10.11.0"
