--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
@@ -30,6 +31,7 @@
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-chartjs-2": "^2.9.0",
     "validator": "^10.11.0"
   }
 }
