--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.25.3",
     "react": "^16.13.1",
